--- a/index.html
+++ b/index.html
@@ -5,36 +5,70 @@
     <meta charset="UTF-8">
     <title>KTK</title>
   <meta charset="UTF-8">
-  <title>Placefarm</title>
+  <title>Placefarm &amp; Davehak</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-sA+utMO1wEPIz1SEyc4ZeAHt/VaZLNFp8pWZfYV+9HY=" crossorigin=""/>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; }
+    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; }
     header { text-align:center; padding:2em 1em; background:#8fc987; color:#fff; }
+    nav ul { list-style:none; padding:0; margin:0; display:flex; justify-content:center; background:#76b972; }
+    nav li { margin:0 1em; }
+    nav a { color:#fff; text-decoration:none; font-weight:bold; }
     h1 { margin:0; }
-    section { padding:1em; }
-    #map { height:400px; margin-top:1em; }
-    footer { text-align:center; background:#f2f2f2; padding:1em 0; }
+    section { padding:2em 1em; }
+    .hero { background:#f4f4f4; text-align:center; padding:3em 1em; }
+    .cards { display:flex; flex-wrap:wrap; gap:1em; justify-content:center; }
+    .card { border:1px solid #ddd; border-radius:4px; padding:1em; width:260px; }
+    #map { height:400px; margin:1em 0; }
+    footer { text-align:center; background:#f2f2f2; padding:1em 0; font-size:0.9em; }
   </style>
 </head>
 <body>
     <h1>KTK 환영합니다!</h1>
     <p>KTK 웹사이트입니다.</p>
 <header>
-  <h1>Placefarm에 오신 것을 환영합니다</h1>
-  <p>농지와 부동산 정보를 한눈에!</p>
+  <h1>Placefarm &amp; Davehak</h1>
+  <p>placefarm.modoo.at을 보조하는 최고의 서브 사이트입니다</p>
 </header>
-<section>
+<nav>
+  <ul>
+    <li><a href="#map-section">지도</a></li>
+    <li><a href="#listings">매물</a></li>
+    <li><a href="#contact">문의</a></li>
+  </ul>
+</nav>
+<section class="hero">
+  <h2>농지 정보와 최신 부동산 소식을 한곳에</h2>
+  <p>이 사이트는 <a href="https://davehak.github.io/" target="_blank">davehak.github.io</a> 프로젝트를 바탕으로 제작되었습니다.</p>
+</section>
+<section id="map-section">
   <h2>농지 위치 보기</h2>
   <div id="map"></div>
 </section>
-<section>
+<section id="listings">
+  <h2>추천 매물</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>경기 화성 농지</h3>
+      <p>면적: 1000평 / 가격: 5억원</p>
+    </div>
+    <div class="card">
+      <h3>충남 서산 농지</h3>
+      <p>면적: 800평 / 가격: 3억원</p>
+    </div>
+    <div class="card">
+      <h3>전북 전주 농지</h3>
+      <p>면적: 1200평 / 가격: 6억원</p>
+    </div>
+  </div>
+</section>
+<section id="contact">
   <h2>문의하기</h2>
   <p>이메일: <a href="mailto:info@placefarm.com">info@placefarm.com</a></p>
 </section>
 <footer>
-  <p>&copy; 2025 Placefarm</p>
+  <p>&copy; 2025 Placefarm &amp; Davehak</p>
 </footer>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-o+J3arE1FsawMLaVlgG3E" crossorigin=""></script>
 <script>
@@ -44,8 +78,9 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   attribution: '&copy; OpenStreetMap contributors'
 }).addTo(map);
 var farms = [
-  { name: '경기 농지', lat: 37.3, lon: 126.8 },
-  { name: '충남 농지', lat: 36.4, lon: 126.9 }
+  { name: '경기 화성', lat: 37.199, lon: 126.831 },
+  { name: '충남 서산', lat: 36.781, lon: 126.451 },
+  { name: '전북 전주', lat: 35.821, lon: 127.148 }
 ];
 farms.forEach(function(farm) {
   L.marker([farm.lat, farm.lon]).addTo(map)
